--- a/grc338/restaurantmenu/index.html
+++ b/grc338/restaurantmenu/index.html
@@ -6,7 +6,6 @@
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
     <meta http-equiv="Pragma" content="no-cache" />
     <meta http-equiv="Expires" content="0" />
-     <link rel="stylesheet" href="style.css" /> 
     <title>GRC 338: restaurant menu</title>
   </head>
   <body>
@@ -16,7 +15,7 @@
     <ul>
       <li>
         <h4>Tempura Fried</h4>
-        <p class:"description">with lemon soy aioli and wasabi tobiko</p>
+        <p>with lemon soy aioli and wasabi tobiko</p>
         <p>$16.00</p>
       </li>
       <li>
