--- a/grc338/website-content-hierarchy/contact.html
+++ b/grc338/website-content-hierarchy/contact.html
@@ -6,13 +6,13 @@
       <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
       <meta http-equiv="Pragma" content="no-cache" />
       <meta http-equiv="Expires" content="0" />
-      <title>Untitled Document</title>
+      <title>Contact - The Restaurant</title>
    </head>
    <body>
       <header>
          <h1>
-            <a href = "index.html"> <img src="logo.svg" alt="Logo for the business"> 
-            </a>
+            <a href="index.html"><img src="logo.svg" alt="" width="120" height="50"></a>
+            <a href="index.html"><img src="placeholder.jpg" alt="" width="300" height="150"></a>
          </h1>
          <nav>
             <ul>
@@ -22,23 +22,17 @@
             </ul>
          </nav>
       </header>
-      <img src="placeholder.jpg" alt=""> 
+
+      <img src="placeholder.jpg" alt="">
       <address>123 Happy Ave, San Luis Obispo, California</address>
       <address>805-756-3663</address>
-      <h3>Hours</h3>
-      <ul>
-         <li>
-            <p>Tuesday–Friday: 0:00–0:00</p>
-         </li>
-         <li>
-            <p>Saturday–Sunday: 0:00–0:00</p>
-         </li>
-         <li>
-            <p>Closed on Mondays</p>
-         </li>
-      </ul>
+      <h2>Hours</h2>
+      <p>Tuesday–Friday: 0:00–0:00</p>
+      <p>Saturday–Sunday: 0:00–0:00</p>
+      <p>Closed on Mondays</p>
+
       <footer>
-         <p> © All rights reserved. The Restaurant, 2025.</p>
+         <p>© All rights reserved. The Restaurant, 2025.</p>
       </footer>
    </body>
 </html>
