--- a/grc338/website-visual-language/menu.html
+++ b/grc338/website-visual-language/menu.html
@@ -31,37 +31,37 @@
           <li>
             <h4>Concha Tradicional</h4>
             <p class="description">Soft sweet bread with a crunchy sugar shell.</p>
-            <p class="price">$0.00</p>
+            <p class="price">$3.50</p>
           </li>
 
           <li>
             <h4>Orejas</h4>
             <p class="description">Flaky puff pastry with caramelized sugar.</p>
-            <p class="price">$0.00</p>
+            <p class="price">$3.50</p>
           </li>
 
           <li>
             <h4>Cuernito de Mantequilla</h4>
             <p class="description">Classic buttery croissant.</p>
-            <p class="price">$0.00</p>
+            <p class="price">$3.00</p>
           </li>
 
           <li>
             <h4>Tarta de Frutas</h4>
             <p class="description">Tart filled with seasonal fruit and custard.</p>
-            <p class="price">$0.00</p>
+            <p class="price">$3.50</p>
           </li>
 
           <li>
             <h4>Cupcake de Vainilla</h4>
             <p class="description">Moist vanilla cupcake with buttercream frosting.</p>
-            <p class="price">$0.00</p>
+            <p class="price">$3.50</p>
           </li>
 
           <li>
             <h4>Pan de Elote</h4>
             <p class="description">Sweet cornbread loaf made fresh each morning.</p>
-            <p class="price">$0.00</p>
+            <p class="price">$3.50</p>
           </li>
 
         </ul>
@@ -75,37 +75,37 @@
           <li>
             <h4>Cafe Americano</h4>
             <p class="description">Black coffee.</p>
-            <p class="price">$0.00</p>
+            <p class="price">$4.00</p>
           </li>
 
           <li>
             <h4>Café Iced</h4>
             <p class="description">Cold-brewed coffee served over ice.</p>
-            <p class="price">$0.00</p>
+            <p class="price">$5.00</p>
           </li>
 
           <li>
             <h4>Capuchino</h4>
             <p class="description">Espresso with steamed milk and foam.</p>
-            <p class="price">$0.00</p>
+            <p class="price">$5.00</p>
           </li>
 
           <li>
             <h4>Latte de Vainilla</h4>
             <p class="description">Espresso with milk and a touch of vanilla.</p>
-            <p class="price">$0.00</p>
+            <p class="price">$5.00</p>
           </li>
 
           <li>
             <h4>Frappuccino de Caramelo</h4>
             <p class="description">Blended ice drink with caramel.</p>
-            <p class="price">$0.00</p>
+            <p class="price">$5.00</p>
           </li>
 
           <li>
             <h4>Mocha</h4>
             <p class="description">Chocolate-infused espresso with steamed milk.</p>
-            <p class="price">$0.00</p>
+            <p class="price">$5.00</p>
           </li>
 
         </ul>
@@ -119,37 +119,37 @@
           <li>
             <h4>Matcha Boba</h4>
             <p class="description">Japanese matcha with tapioca pearls.</p>
-            <p class="price">$0.00</p>
+            <p class="price">$5.00</p>
           </li>
 
           <li>
             <h4>Smoothie de Mango</h4>
             <p class="description">Fresh mango blended with ice.</p>
-            <p class="price">$0.00</p>
+            <p class="price">$5.00</p>
           </li>
 
           <li>
             <h4>Smoothie de Fresa</h4>
             <p class="description">Strawberry smoothie with milk.</p>
-            <p class="price">$0.00</p>
+            <p class="price">$4.50</p>
           </li>
 
           <li>
             <h4>Milk Tea Clásico</h4>
             <p class="description">Black tea with milk and brown sugar pearls.</p>
-            <p class="price">$0.00</p>
+            <p class="price">$4.50</p>
           </li>
 
           <li>
             <h4>Taro Milk Tea</h4>
             <p class="description">Sweet purple taro flavor with pearls.</p>
-            <p class="price">$0.00</p>
+            <p class="price">$5.00</p>
           </li>
 
           <li>
-            <h4>Product 18</h4>
-            <p class="description">Long-ish description of the product, maybe with ingredients or how it's cooked.</p>
-            <p class="price">$0.00</p>
+            <h4>Strawberry Milk Tea</h4>
+            <p class="description">Black tea with milk, strawberry syrup, and brown sugar pearls.</p>
+            <p class="price">$5.00</p>
           </li>
 
         </ul>
