--- a/grc338/website-visual-language/about.html
+++ b/grc338/website-visual-language/about.html
@@ -21,7 +21,7 @@
     </header>
 
     <main>
-      <img src="about.jpeg" alt="Placeholder image.">
+      <img src="about.jpeg" alt="Bakery with pink interior, bar seating and pastries on display.">
       <article>
         <h2>About</h2>
 
