--- a/grc338/website-visual-language/about.html
+++ b/grc338/website-visual-language/about.html
@@ -10,7 +10,7 @@
 <body>
   <div class="container"> 
     <header>
-      <h1><a href="index.html"><img src="logo.svg" alt="The Restaurant logo."></a></h1>
+      <h1><a href="index.html"><img src="logo.svg" alt="Prim's Bakery logo."></a></h1>
       <nav>
         <ul>
           <li class="selected"><a href="about.html">About</a></li>
