--- a/grc338/website-visual-language/contact.html
+++ b/grc338/website-visual-language/contact.html
@@ -10,7 +10,7 @@
 <body>
   <div class="container">
     <header>
-      <h1><a href="index.html"><img src="logo.svg" alt="The Restaurant logo."></a></h1>
+      <h1><a href="index.html"><img src="logo.svg" alt="Prim's Bakery logo"></a></h1>
       <nav>
         <ul>
           <li><a href="about.html">About</a></li>
@@ -21,7 +21,7 @@
     </header>
 
     <main>
-      <img src="contact.jpg" alt="Restaurant photo.">
+      <img src="contact.jpg" alt="Bakery with pink interior, tables, chairs, and booths.">
       <article>
         <h2>Contact</h2>
         <address>Calle Primavera 24, Pátzcuaro, Michoacán, México.</address>
