--- a/grc338/website-visual-language/menu.html
+++ b/grc338/website-visual-language/menu.html
@@ -10,7 +10,7 @@
 <body>
   <div class="container">
     <header>
-      <h1><a href="index.html"><img src="logo.svg" alt="Restaurant logo."></a></h1>
+      <h1><a href="index.html"><img src="logo.svg" alt="Prim's Bakery logo."></a></h1>
       <nav>
         <ul>
           <li><a href="about.html">About</a></li>
@@ -25,7 +25,7 @@
 
       <section>
         <h3>Pastries</h3>
-        <img src="pandulce.jpeg" alt="Category 1 preview image.">
+        <img src="pandulce.jpeg" alt="Fresh baked conchas with sugar shell topping.">
         <ul>
 
           <li>
@@ -69,7 +69,7 @@
 
       <section>
         <h3>Coffee</h3>
-        <img src="coffee.jpeg" alt="Category 2 preview image.">
+        <img src="coffee.jpeg" alt="Iced mocha coffee topped with whipped cream and chocolate syrup.">
         <ul>
 
           <li>
@@ -113,7 +113,7 @@
 
       <section>
         <h3>Boba Drinks</h3>
-        <img src="boba.jpeg" alt="Category 3 preview image.">
+        <img src="boba.jpeg" alt="Colorful boba drinks in clear cups with tapioca pearls.">
         <ul>
 
           <li>
